test/runnable/fun-closure-type-param.crow
import
	crow/io/print: out, print

main nat^(_ string[]) summon
	f = 1 getter
	out print "{f[]}"
	()

getter[k] fun k()(k k) k is-data
	() => k
